# spiceflow/scripts/openapi.yml
@@ -1,4 +1,11 @@
 openapi: 3.1.3
+servers:
+  - url: https://api.com
+x-fern-global-headers:
+  - header: authorization
+    name: Authorization
+security:
+  - bearerAuth: []
 components:
   securitySchemes:
     bearerAuth:
@@ -31,6 +38,8 @@ paths:
           content:
             text/plain:
               schema: {}
+      x-fern-sdk-group-name: one
+      x-fern-sdk-method-name: take
   /stream:
     get:
       x-fern-streaming:
